<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="48dp"
    tools:context=".ConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/text_view_registration_confirmation"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#9ECBFFF9"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/text_view_confirmation_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textColor="#0F0F0F"
                android:textSize="14sp"
                tools:text="preview text frfrefwefds fnsdfnkjdsnfnsafndsakfn nkjsadnfjsadnfjsandkfljsavcvn " />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            tools:text="@string/button_send_email" />

        <TextView
            android:id="@+id/text_view_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            tools:text="@string/button_send_sms" />
    </LinearLayout>
</ScrollView>